2012-06-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:    [Bug 1844430]: cygwin make fails in 8.4.14-8.5b3
	* unix/tcl.m4:        Sync with Tcl version.
	* unix/configure:     autoconf-2.13

2012-06-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/*.tcl:      [Bug 3534137]: $tcl_platform(platform) !=
	[tk windowingsystem]

2012-06-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:   Implement TkCygwinMainEx for loading
	* generic/tkWindow.c: Cygwin's Tk_MainEx from the Tk dll.

2012-06-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XChangeWindowAttributes signature and
	* generic/tkIntXlibDeclsDecls.h: many others to match Xorg, needed for Cygwin.

2012-06-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XSetDashes signature and many others
	* generic/tkIntXlibDeclsDecls.h: to match Xorg, needed for Cygwin.
	* unix/Makefile.in:      Add .PHONY targets, and various quoting issues
	* win/Makefile.in:       (Backported from Tcl 8.5)

2012-05-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XFillRectangle(s)/XDrawLines(s) signature
	* generic/tkIntXlibDeclsDecls.h: to match Xorg, needed for Cygwin.
	* xlib/xdraw.c:
	* mac/tkMacDraw.c:
	* macosx/tkMacOSXDraw.c:
	* win/tkWinDraw.c:
	* win/Makefile.in:       Generate same pkgIndex.tcl file for win32 and
	* unix/Makefile.in:      cygwin, one that is equally useable for both.

2012-05-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkWindow.c:    Simpify determination whether we are running on cygwin.
	* generic/tkStubInit.c:  Export Tk_GetHINSTANCE, TkSetPixmapColormap and
	* generic/tkInt.decls: 	 TkpPrintWindowId on the Cygwin dll, sync stub table
	with Tk 8.6 win32 version.
	* generic/tk*Decls.h:    re-generated
	* win/Makefile.in:       Fix "make genstubs" when cross-compiling on UNIX

2012-05-24  Jan Nijtmans  <nijtmans@users.sf.net>
