@@ -503,8 +503,8 @@ else
 	    eval TK_LIB_FLAG="-ltk`echo ${VERSION} | tr -d .`\${TK_DBGX}"
 	fi
 	TK_BUILD_LIB_SPEC="-L`pwd | sed -e 's/ /\\\\ /g'` ${TK_LIB_FLAG}"
-	if test "${ac_cv_cygwin+set}" = set; then
-	    WISH_BUILD_LIB_SPEC="-L\$(TOP_DIR)/win -ltk84 \${TCL_LIB_SPEC}"
+	if test "${ac_cv_cygwin}" = "yes" -a "$SHARED_BUILD" = "1"; then
+	    WISH_BUILD_LIB_SPEC="-L\$(TOP_DIR)/win -ltk\${MAJOR_VERSION}\${MINOR_VERSION} \${TCL_LIB_SPEC}"
 	else
 	    WISH_BUILD_LIB_SPEC="-L`pwd | sed -e 's/ /\\\\ /g'` ${TK_LIB_FLAG} \${WISH_LIBS}"
 	fi
